Tabela com as cargas do exemplo 2 (incompleta)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -242,8 +242,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nos eixos de 1 a 4 há pórticos deslocáveis com as ligações viga-coluna rígidas com suas bases engastadas, enquanto que os eixos de A a D são pórticos com ligações flexíveis e as vigas podem ser consideradas como biapoiadas. Há contraventamentos entre os pilares A2 e A3 e D2 e D3."
+    "Nos eixos de 1 a 4 há pórticos deslocáveis com as ligações viga-coluna rígidas com suas bases engastadas, enquanto que os eixos de A a D são pórticos com ligações flexíveis e as vigas podem ser consideradas como biapoiadas. Há contraventamentos entre os pilares A2 e A3 e D2 e D3.\n",
+    "\n",
+    "As ações permanentes estão descritas na tabela a seguir:\n",
+    "\n",
+    "| Carga Permanente |           $G_i$ | $\\gamma_g$ |\n",
+    "|:--------------------------:|-----------------------------------|---|\n",
+    "|Peso-próprio da laje mista| $G_1 = 2.27 KPa$ | 1,30|"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'qgrid'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-52609c3bb422>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mqgrid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"teste.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'qgrid'"
+     ]
+    }
+   ],
+   "source": [
+    "import qgrid\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"teste.csv\")\n",
+    "\n",
+    "table = ff.create_table(df)\n",
+    "qgrid_widget = qgrid.show_grid(df, show_toolbar=True)\n",
+    "qgrid_widget "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
