--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "<table border=\"1\" class=\"dataframe table table-striped table-bordered table-centered table-hover\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>i</th>\n",
        "      <th>Carga</th>\n",
        "      <th>$G_i$</th>\n",
        "      <th>$\\gamma_g$</th>\n",
@@ -266,19 +266,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Peso próprio da laje mista</td>\n",
        "      <td>2.27 KPa</td>\n",
        "      <td>1.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>Revestimento do piso</td>\n",
        "      <td>1.10 KPa</td>\n",
        "      <td>1.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>Vigamentos</td>\n",
        "      <td>0.25 KPa</td>\n",
        "      <td>1.25</td>\n",
@@ -290,21 +290,22 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import qgrid\n",
     "import pandas as pd\n",
     "from IPython.display import HTML\n",
     "\n",
     "df = pd.read_csv(\"permanente_exemplo2.csv\")\n",
     "\n",
+    "df.set_index('i')\n",
+    "\n",
     "#table = df.create_table(df)\n",
     "\n",
-    "HTML(df.to_html(classes='table table-striped table-bordered table-centered table-hover'))"
+    "HTML(df.to_html(classes='table table-striped table-bordered table-centered table-hover',index=False))\n"
    ]
   },
   {
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
        "<table border=\"1\" class=\"dataframe table table-striped table-bordered table-centered table-hover\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>i</th>\n",
        "      <th>Carga</th>\n",
        "      <th>$Q_i$</th>\n",
        "      <th>$\\gamma_q$</th>\n",
@@ -333,19 +334,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Instalações e serviços</td>\n",
        "      <td>0.50 KPa</td>\n",
        "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>Craga de ocupação</td>\n",
        "      <td>3.00 KPa</td>\n",
        "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>Vento</td>\n",
        "      <td>0.60 KPa</td>\n",
        "      <td>1.4</td>\n",
@@ -357,13 +358,12 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import qgrid\n",
     "import pandas as pd\n",
     "from IPython.display import HTML\n",
     "\n",
@@ -371,7 +371,7 @@
     "\n",
     "#table = df.create_table(df)\n",
     "\n",
-    "HTML(df.to_html(classes='table table-striped table-bordered table-centered table-hover'))"
+    "HTML(df.to_html(classes='table table-striped table-bordered table-centered table-hover',index=False))"
    ]
   },
   {
@@ -710,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
